<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/diamondbank">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_email_black_24dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="5dp"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/curved"
            android:src="@drawable/ic_photo_camera_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Spinner
                style="@style/spinner"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner"
                android:entries="@array/country"
                android:textAlignment="center"
                android:textSize="100sp"

                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/plus_sign" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/lock_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgotLoginDetails"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/arrows" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quickTransfer"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/phone_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/changedDevice"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/wallet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quickBillPayment"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
               android:layout_gravity="center"
                android:src="@drawable/add_person_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:layout_gravity="center"
                android:text="@string/openAnAccount"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_description_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quickLoans"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
               android:layout_gravity="center"
                android:src="@drawable/ic_desktop_mac_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center"
                android:text="@string/internetBanking"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>





</LinearLayout>